Utilities: Rename special target binaries only if they exist
Before 92c5a0d0687edc48f3e3e8264ac9d2d6e2ebf029, all programs in the
SPECIAL_TARGETS list were built because they didn't have an
EXCLUDE_FROM_ALL property set.

That commit set the property for all targets, but because of this, the
minimal "Required" build configuration no longer built, as CMake failed
to rename every special target. Even the not built ones.

This commit makes the rename action run only if the executable exists,
which makes us build Serenity without the `install` utility, and also
by using the minimal configuration set. :^) :^)

--- a/Userland/Utilities/CMakeLists.txt
+++ b/Userland/Utilities/CMakeLists.txt
@@ -46,7 +46,10 @@ foreach(CMD_SRC ${CMD_SOURCES})
     install(TARGETS ${TARGET_NAME} RUNTIME DESTINATION bin OPTIONAL)
 
     if (CMD_NAME IN_LIST SPECIAL_TARGETS)
-        install(CODE "file(RENAME ${CMAKE_INSTALL_PREFIX}/bin/${CMD_NAME}-bin ${CMAKE_INSTALL_PREFIX}/bin/${CMD_NAME})")
+        install(CODE
+            "if (EXISTS ${CMAKE_INSTALL_PREFIX}/bin/${CMD_NAME}-bin)
+                file(RENAME ${CMAKE_INSTALL_PREFIX}/bin/${CMD_NAME}-bin ${CMAKE_INSTALL_PREFIX}/bin/${CMD_NAME})
+            endif()")
     endif()
 endforeach()
 
