AK: Testing for `AK::quickselect_inline`
The testing code found here is mainly derived from the Tests for
`AK::quick_sort`.

--- a/Tests/AK/CMakeLists.txt
+++ b/Tests/AK/CMakeLists.txt
@@ -58,6 +58,7 @@ set(AK_TEST_SOURCES
     TestOwnPtr.cpp
     TestPrint.cpp
     TestQueue.cpp
+    TestQuickSelect.cpp
     TestQuickSort.cpp
     TestRedBlackTree.cpp
     TestRefPtr.cpp
