AK: Move `Stream` and `SeekableStream` from `LibCore`
`Stream` will be qualified as `AK::Stream` until we remove the
`Core::Stream` namespace. `IODevice` now reuses the `SeekMode` that is
defined by `SeekableStream`, since defining its own would require us to
qualify it with `AK::SeekMode` everywhere.

--- a/AK/CMakeLists.txt
+++ b/AK/CMakeLists.txt
@@ -19,6 +19,7 @@ set(AK_SOURCES
     NumberFormat.cpp
     Random.cpp
     StackInfo.cpp
+    Stream.cpp
     String.cpp
     StringBuilder.cpp
     StringFloatingPointConversions.cpp
