AK: Move memory streams from `LibCore`

--- a/AK/CMakeLists.txt
+++ b/AK/CMakeLists.txt
@@ -16,6 +16,7 @@ set(AK_SOURCES
     JsonValue.cpp
     kmalloc.cpp
     LexicalPath.cpp
+    MemoryStream.cpp
     NumberFormat.cpp
     Random.cpp
     StackInfo.cpp
