Base: Add .ico file association to Image Viewer and Pixel Paint

--- a/Base/home/anon/.config/LaunchServer.ini
+++ b/Base/home/anon/.config/LaunchServer.ini
@@ -10,6 +10,7 @@ jpg=/bin/ImageViewer
 jpeg=/bin/ImageViewer
 qoi=/bin/ImageViewer
 tga=/bin/ImageViewer
+ico=/bin/ImageViewer
 html=/bin/Browser
 wav=/bin/SoundPlayer
 flac=/bin/SoundPlayer
