LibGfx: Move ICCProfile.{h,cpp} to ICC/Profile.{h,cpp}

--- a/Userland/Libraries/LibGfx/CMakeLists.txt
+++ b/Userland/Libraries/LibGfx/CMakeLists.txt
@@ -28,7 +28,7 @@ set(SOURCES
     Font/WOFF/Font.cpp
     GradientPainting.cpp
     GIFLoader.cpp
-    ICCProfile.cpp
+    ICC/Profile.cpp
     ICOLoader.cpp
     ImageDecoder.cpp
     JPGLoader.cpp
