LibGfx: Split ICC/Profile.{h,cpp} into several files
s15Fixed16Number and XYZNumber are somewhat awkwardly duplicated
in both Profile.cpp and TagTypes.cpp. Other than that, this is a
pure code move.

No behavior change.

--- a/Userland/Libraries/LibGfx/CMakeLists.txt
+++ b/Userland/Libraries/LibGfx/CMakeLists.txt
@@ -29,6 +29,8 @@ set(SOURCES
     GradientPainting.cpp
     GIFLoader.cpp
     ICC/Profile.cpp
+    ICC/Tags.cpp
+    ICC/TagTypes.cpp
     ICOLoader.cpp
     ImageDecoder.cpp
     JPGLoader.cpp
