--- a/Userland/Applications/Presenter/CMakeLists.txt
+++ b/Userland/Applications/Presenter/CMakeLists.txt
@@ -13,5 +13,5 @@ set(SOURCES
     Slide.cpp
     SlideObject.cpp
 )
-serenity_app(Presenter ICON app-display-settings)
+serenity_app(Presenter ICON app-presenter)
 target_link_libraries(Presenter PRIVATE LibWebView LibGUI LibGfx LibFileSystemAccessClient LibCore LibMain)
