LibGfx: Move TestFontHandling over to input file approach in 73d79453516
Rather than reading files out of /res, put them in a subfolder of
Tests/LibGfx/ and pick the path based on AK_OS_SERENITY.

That way, the tests can also pass when run under lagom.

--- a/Tests/LibGfx/CMakeLists.txt
+++ b/Tests/LibGfx/CMakeLists.txt
@@ -8,4 +8,4 @@ foreach(source IN LISTS TEST_SOURCES)
     serenity_test("${source}" LibGfx LIBS LibGfx)
 endforeach()
 
-install(FILES TestFont.font DESTINATION usr/Tests/LibGfx)
+install(DIRECTORY test-inputs DESTINATION usr/Tests/LibGfx)
