Ladybird: Spawn ladybird and headless-browser using helpers in WebDriver
This allows the WebDriver to take advantage of the common helper process
spawning code when launching ladybird, and to not assume a particular
directory layout.

--- a/Ladybird/WebDriver/CMakeLists.txt
+++ b/Ladybird/WebDriver/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCES
     ${WEBDRIVER_SOURCE_DIR}/Session.cpp
     ${WEBDRIVER_SOURCE_DIR}/WebContentConnection.cpp
     ../Utilities.cpp
+    ../HelperProcess.cpp
     main.cpp
 )
 
