Kernel: Use `AK::Stream` to write packed binary data

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -483,6 +483,8 @@ endif()
 set(AK_SOURCES
     ../AK/GenericLexer.cpp
     ../AK/Hex.cpp
+    ../AK/MemoryStream.cpp
+    ../AK/Stream.cpp
     ../AK/StringBuilder.cpp
     ../AK/StringUtils.cpp
     ../AK/StringView.cpp
