Piano: Rename KnobsWidget to TrackControlsWidget
This more generic name will better reflect the purpose of the widget in
the future, as this commit begins the long process of enhancing the
widget into a container for all controls of Piano's currently selected
track.

--- a/Userland/Applications/Piano/CMakeLists.txt
+++ b/Userland/Applications/Piano/CMakeLists.txt
@@ -11,12 +11,12 @@ set(SOURCES
     AudioPlayerLoop.cpp
     ExportProgressWindow.cpp
     KeysWidget.cpp
-    KnobsWidget.cpp
     main.cpp
     MainWidget.cpp
     PlayerWidget.cpp
     RollWidget.cpp
     SamplerWidget.cpp
+    TrackControlsWidget.cpp
     TrackManager.cpp
     WaveWidget.cpp
     ProcessorParameterWidget/ParameterWidget.cpp
