--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,8 +2,12 @@
 /AK @bgianfo
 /Kernel @bgianfo
 /Kernel/Devices/Audio @GMTA
+/Ladybird @linusg
+/Ports/neofetch @linusg
+/Ports/python3 @linusg
 /Toolchain @bgianfo
 /Tests @bgianfo
+/Userland/Applications/Browser @linusg
 /Userland/Applications/CrashReporter @linusg
 /Userland/Applications/Spreadsheet @alimpfard
 /Userland/Libraries/LibC @bgianfo
