Meta: Add a `Shell --posix` parser fuzzer

--- a/Meta/Lagom/Fuzzers/CMakeLists.txt
+++ b/Meta/Lagom/Fuzzers/CMakeLists.txt
@@ -62,6 +62,7 @@ add_simple_fuzzer(FuzzSHA256 LibCrypto)
 add_simple_fuzzer(FuzzSHA384 LibCrypto)
 add_simple_fuzzer(FuzzSHA512 LibCrypto)
 add_simple_fuzzer(FuzzShell LibShell)
+add_simple_fuzzer(FuzzShellPosix LibShell)
 add_simple_fuzzer(FuzzSQLParser LibSQL)
 add_simple_fuzzer(FuzzTar LibArchive)
 add_simple_fuzzer(FuzzTTF LibGfx)
