LibGfx: Rename `JPGLoader` to `JPEGLoader`
The patch also contains modifications on several classes, functions or
files that are related to the `JPGLoader`.

Renaming include:
 - JPGLoader{.h, .cpp}
 - JPGImageDecoderPlugin
 - JPGLoadingContext
 - JPG_DEBUG
 - decode_jpg
 - FuzzJPGLoader.cpp
 - Few string literals or texts

--- a/Userland/Libraries/LibGfx/CMakeLists.txt
+++ b/Userland/Libraries/LibGfx/CMakeLists.txt
@@ -34,7 +34,7 @@ set(SOURCES
     ICC/TagTypes.cpp
     ICOLoader.cpp
     ImageDecoder.cpp
-    JPGLoader.cpp
+    JPEGLoader.cpp
     PBMLoader.cpp
     PGMLoader.cpp
     PNGLoader.cpp
