--- a/Meta/Azure/Setup.yml
+++ b/Meta/Azure/Setup.yml
@@ -34,6 +34,7 @@ steps:
   - ${{ if eq(parameters.os, 'macOS') }}:
     # macOS ships an ancient Bash 3.x by default
     - script: |
+        brew update
         brew install bash ninja wabt ccache unzip qt llvm@15
       displayName: 'Install Dependencies'
 
