Meta: Allow disabling LibWeb fuzzers
The LibWeb fuzzer build is really slow, so for local builds it is useful
to disable it when you're not interested in running that fuzzer.

Co-authored-by: Andrew Kaster <akaster@serenityos.org>

--- a/Meta/Lagom/Fuzzers/CMakeLists.txt
+++ b/Meta/Lagom/Fuzzers/CMakeLists.txt
@@ -20,7 +20,9 @@ endfunction()
 
 add_simple_fuzzer(FuzzBMPLoader LibGfx)
 add_simple_fuzzer(FuzzBrotli LibCompress)
-add_simple_fuzzer(FuzzCSSParser LibWeb)
+if (ENABLE_LAGOM_LIBWEB)
+    add_simple_fuzzer(FuzzCSSParser LibWeb)
+endif()
 add_simple_fuzzer(FuzzCyrillicDecoder LibTextCodec)
 add_simple_fuzzer(FuzzDeflateCompression LibCompress)
 add_simple_fuzzer(FuzzDeflateDecompression LibCompress)
