--- a/Userland/Utilities/CMakeLists.txt
+++ b/Userland/Utilities/CMakeLists.txt
@@ -133,7 +133,7 @@ target_link_libraries(unzip PRIVATE LibArchive LibCompress LibCrypto)
 target_link_libraries(update-cpp-test-results PRIVATE LibCpp)
 target_link_libraries(useradd PRIVATE LibCrypt)
 target_link_libraries(wallpaper PRIVATE LibGfx LibGUI)
-target_link_libraries(wasm PRIVATE LibWasm LibLine)
+target_link_libraries(wasm PRIVATE LibWasm LibLine LibJS)
 target_link_libraries(wsctl PRIVATE LibGUI LibIPC)
 target_link_libraries(xml PRIVATE LibXML)
 target_link_libraries(zip PRIVATE LibArchive LibCompress LibCrypto)
