LibGfx: Implement even-odd method for Quad::contains() and add tests

--- a/Tests/LibGfx/CMakeLists.txt
+++ b/Tests/LibGfx/CMakeLists.txt
@@ -5,6 +5,7 @@ set(TEST_SOURCES
     TestICCProfile.cpp
     TestImageDecoder.cpp
     TestImageWriter.cpp
+    TestQuad.cpp
     TestRect.cpp
     TestWOFF.cpp
     TestWOFF2.cpp
