Revert "LibWeb/CSS: Rename CalculatedStyleValue -> CSSMathValue"
This reverts commit 06ac2cc631702e1569cb790ea1f3c1cb729f8e89.

We're going to need separate types for the JS-exposed style values, so
it doesn't make sense for us to match their names with our internal
types.

--- a/Meta/gn/secondary/Userland/Libraries/LibWeb/CSS/StyleValues/BUILD.gn
+++ b/Meta/gn/secondary/Userland/Libraries/LibWeb/CSS/StyleValues/BUILD.gn
@@ -14,8 +14,8 @@ source_set("StyleValues") {
     "CSSKeywordValue.cpp",
     "CSSLCHLike.cpp",
     "CSSLabLike.cpp",
-    "CSSMathValue.cpp",
     "CSSRGB.cpp",
+    "CalculatedStyleValue.cpp",
     "ConicGradientStyleValue.cpp",
     "ContentStyleValue.cpp",
     "CounterDefinitionsStyleValue.cpp",
