CI: Remove `always()` from job conditionals
These jobs have no dependencies on other jobs, nor should they be
uncancelable.

--- a/.github/workflows/lint-code.yml
+++ b/.github/workflows/lint-code.yml
@@ -5,7 +5,7 @@ on: [ push, pull_request ]
 jobs:
   lint:
     runs-on: macos-14
-    if: always() && github.repository == 'LadybirdBrowser/ladybird'
+    if: github.repository == 'LadybirdBrowser/ladybird'
 
     steps:
       - uses: actions/checkout@v4
