LibWeb+LibGfx: Refactor CSS filters into LibGfx
CSS filters work similarly to canvas filters, so it makes sense to have
Gfx::Filter that can be used by both libraries in an analogous way
as Gfx::Color.

--- a/Libraries/LibGfx/CMakeLists.txt
+++ b/Libraries/LibGfx/CMakeLists.txt
@@ -41,6 +41,7 @@ set(SOURCES
     ImageFormats/WebPWriterLossless.cpp
     ImageFormats/AVIFLoader.cpp
     ImmutableBitmap.cpp
+    SkiaUtils.cpp
     PaintingSurface.cpp
     Palette.cpp
     Path.cpp
