--- a/Meta/gn/secondary/Userland/Libraries/LibCrypto/BUILD.gn
+++ b/Meta/gn/secondary/Userland/Libraries/LibCrypto/BUILD.gn
@@ -4,6 +4,7 @@ shared_library("LibCrypto") {
   cflags_cc = [ "-Wvla" ]
   deps = [
     "//AK",
+    "//Meta/gn/build/libs/openssl",
     "//Userland/Libraries/LibCore",
   ]
   sources = [
